<resources>
    <string name="app_name" translatable="false">SafePrice</string>

    <array name="exchanges">
        <item>SafeTrade</item>
        <item>CREX24</item>
        <item>GRAVIEX</item>
    </array>

    <string name="exchange">Exchange</string>
    <string name="exchange_summary">Where to fetch the data</string>
    <string name="market">Market</string>
    <string name="market_summary">Safecoin is traded with different values. Choose one!</string>
    <string name="frequency">Update frequency</string>
    <string name="frequency_summary">Set the frequency of data update</string>
    <string name="frequency_value">minute(s)</string>
    <string name="when">Show time since last update</string>
    <string name="start_at_boot">Start at boot</string>
    <string name="sources">Source code on GitHub</string>
    <string name="sources_summary">Because open source is important to stay SAFE!</string>

    <string name="updating">Updating…</string>
    <string name="update">Update</string>
    <string name="settings">Settings</string>
    <string name="stop">Stop</string>
</resources>
